Fix some styling bugs with alignment

--- a/site/pages/badger-profile/social-contacts/style.css
+++ b/site/pages/badger-profile/social-contacts/style.css
@@ -14,5 +14,6 @@
 }
 
 .socialLinks li {
+  width: 27px;
   margin-right: 15px;
 }
